# fossil-light-client

./: .dockerignore  .env.local  .gitignore  .gitmodules  .tool-versions  Cargo.toml  Dockerfile.deployer  Dockerfile.rust  L1MessagesSender.json  README.md  Scarb.toml  docker-compose.accumulation.yml  docker-compose.build.yml  docker-compose.services.yml  docker-compose.yaml  docker-compose.yml  terminal
.cargo/: config.toml
.github/workflows/: cairo.yml  rust.yml
client/src/: main.rs
config/: .env.docker.example  .env.example  .env.local.example  anvil.env.example  anvil.messaging.docker.json  anvil.messaging.json  katana.env
contracts/: Scarb.toml
contracts/ethereum/: foundry.toml
contracts/ethereum/lib/starkware/: NamedStorage.sol
contracts/ethereum/script/: LocalTesting.s.sol  SendMessage.s.sol
contracts/ethereum/src/: L1MessageSender.sol  StarknetMessagingLocal.sol
contracts/ethereum/src/interfaces/: IStarknetCore.sol
contracts/katana/: deploy.sh
contracts/src/: groth16_verifier.cairo
contracts/starknet/: Scarb.toml
contracts/starknet/katana/: anvil.messaging.json
contracts/starknet/l1_message_proxy/: Scarb.toml
contracts/starknet/l1_message_proxy/src/: lib.cairo
contracts/starknet/l1_message_proxy/tests/: test_contract.cairo
contracts/starknet/store/: Scarb.toml
contracts/starknet/store/src/: lib.cairo
contracts/starknet/store/tests/: fixtures.cairo  (+2 more)
contracts/starknet/verifier/: Scarb.toml
contracts/tests/: verifier_test.cairo
crates/client/: Cargo.toml  Dockerfile
crates/client/db-store/: 0.db
crates/client/src/: client.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/ethereum/: Cargo.toml
crates/ethereum/src/: lib.rs
crates/guest-mmr/: Cargo.toml
crates/guest-mmr/src/: core.rs  formatting.rs  helper.rs  lib.rs
crates/guest-mmr/tests/: mmr_test.rs
crates/guest-types/: Cargo.toml
crates/guest-types/src/: lib.rs
crates/host/: Cargo.toml
crates/host/src/: accumulator.rs  db_access.rs  lib.rs  proof_generator.rs  types.rs  validator.rs
crates/host/tests/: mmr_proofs_test.rs
crates/ipfs-utils/: Cargo.toml
crates/ipfs-utils/src/: lib.rs
crates/methods/: Cargo.toml  build.rs
crates/methods/blocks-validity/: Cargo.toml
crates/methods/blocks-validity/src/: main.rs
crates/methods/guest/: Cargo.toml
crates/methods/guest/src/: guest_mmr.rs  main.rs
crates/methods/mmr-append/: Cargo.toml
crates/methods/mmr-append/src/: main.rs
crates/methods/mmr-benchmark/: Cargo.toml
crates/methods/mmr-benchmark/src/: main.rs
crates/methods/mmr-build/: Cargo.toml
crates/methods/src/: lib.rs
crates/methods/validate_blocks_and_extract_fees/: Cargo.toml
crates/methods/validate_blocks_and_extract_fees/src/: main.rs
crates/mmr-utils/: Cargo.toml
crates/mmr-utils/src/: lib.rs
crates/publisher/: Cargo.toml  build.rs
crates/publisher/benches/: mmr_benchmark.rs
crates/publisher/src/: accumulator.rs  db_access.rs  errors.rs  lib.rs  proof_generator.rs  types.rs  validator.rs
crates/publisher/src/api/: operations.rs
crates/publisher/src/cli/: build_mmr.rs  extract_fees.rs  mod.rs  update_mmr.rs
crates/publisher/src/core/: accumulator.rs  batch_processor.rs  mmr_state_manager.rs  mod.rs  proof_generator.rs
crates/publisher/src/db/: db_access.rs  mod.rs
crates/publisher/src/utils/: mod.rs  types.rs  utils.rs
crates/publisher/src/validator/: validator.rs
crates/publisher/tests/: 0.db  mmr_proofs_test.rs
crates/relayer/: Cargo.toml  Dockerfile
crates/relayer/abi/: L1MessagesSender.json
crates/relayer/src/: main.rs  relayer.rs
crates/starknet-handler/: Cargo.toml
crates/starknet-handler/src/: account.rs  error.rs  lib.rs  provider.rs
crates/state-proof-api/: Cargo.toml
crates/state-proof-api/src/: api.rs  lib.rs  main.rs
crates/state-proof-api/tests/: api_tests.rs
docker/: Dockerfile.anvil  Dockerfile.api  Dockerfile.api.osx  Dockerfile.build-mmr  Dockerfile.build-mmr.osx  Dockerfile.client  Dockerfile.client.osx  Dockerfile.deploy  Dockerfile.katana  Dockerfile.relayer
docker/compose/: docker-compose.yml
docker/images/anvil/: Dockerfile  start-anvil.sh
docker/images/client/: Dockerfile
docker/images/ethereum/: Dockerfile
docker/images/katana/: Dockerfile
docker/images/relayer/: Dockerfile
docker/images/starknet/: Dockerfile
docs/: docusaurus.config.ts  package.json  sidebars.ts
docs/docs/: intro.md
docs/docs/calculating-avg-gas-fees/: grouping-headers.md  intro.md  storage-and-retrieval.md  zkvm-calculation.md
docs/docs/initial-accumulation-event/: batch-selection.md  block-headers-validation.md  constructing-mmr.md  data-source.md  database-setup.md  generating-proofs.md  intro.md  onchain-submission.md
docs/docs/system-overwiew/: components-and-data-flow.md  high-level-architecture.md  key-technologies.md
docs/docs/updating-light-client/: initiating-update.md  intro.md  onchain-storage.md  processing-and-proofs.md  relaying-block-hashes.md  subdividing-in-batches.md
docs/src/: types.d.ts
docs/src/css/: custom.css
docs/src/pages/: index.tsx
ethereum/: foundry.toml  remappings.txt
ethereum/cache/: solidity-files-cache.json
ethereum/lib/: U256Splitter.sol
ethereum/logs/: local_setup.json
ethereum/script/: Counter.s.sol
ethereum/src/: L1MessagesSender.sol
guest-types/src/: lib.rs
host/src/: accumulator.rs  types.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: guest_mmr.rs  lib.rs
relayer/: Cargo.toml  L1MessagesSender.json
relayer/src/: main.rs
scripts/: build-images.sh  build-mmr-image.sh  build-network.sh  build-osx-images.sh  build-services.sh  clean-docker-images.sh  clippy.sh  deploy-contracts.bash.sh  deploy-contracts.sh  deploy-ethereum.sh  deploy-starknet.sh  deploy.sh  lint.sh  run_local_workflow.sh  run_relayer.sh  run_relayer_local.sh  start.sh
scripts/katana/: deploy.sh
src/: main.rs
starknet/: Scarb.toml
starknet-handler/: Cargo.toml
starknet/katana/: deploy.sh
starknet/l1_message_proxy/tests/: test_contract.cairo
starknet/store/src/: lib.cairo
(+9 files in other folders)
