[workspace]
resolver = "2"
members = [
    "crates/starknet-handler",
    "crates/client",
    "crates/relayer",
    "crates/common",
    "crates/methods",
    "crates/publisher",
    "crates/guest-types",
    "crates/ethereum",
    "crates/mmr-utils",
    "crates/guest-mmr",
    "crates/ipfs-utils",
]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
# External git dependencies
eth-rlp-types = { git = "https://github.com/NethermindEth/eth-rlp-verify.git", package = "eth-rlp-types", branch = "tiny-keccak" }
eth-rlp-verify = { git = "https://github.com/NethermindEth/eth-rlp-verify.git", branch = "tiny-keccak" }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs.git", branch = "master" }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs.git", branch = "master" }
mmr = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "feat/sha2-hasher" }
store = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "feat/sha2-hasher" }
hasher = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "feat/sha2-hasher", features = [
    "sha256",
] }
garaga_rs = { git = "https://github.com/keep-starknet-strange/garaga.git", branch = "main", default-features = false }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.3.2" }

# Common dependencies with consistent versions
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
eyre = "0.6"
thiserror = "2.0.4"
tracing = "0.1.40"
tokio = "1.41.1"
dotenv = "0.15"
clap = { version = "4.4.11", features = ["derive"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"
uuid = "1.14"
risc0-zkvm = { version = "1.2.4" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
alloy = { version = "0.6.4", features = [
    "providers",
    "network",
    "sol-types",
    "signer-local",
] }
alloy-contract = "0.6.4"
alloy-sol-types = { version = "0.8.12", features = ["json"] }
mockall = "0.13"
curl = "0.4.47"
hex = "0.4"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes.git", tag = "sha2-v0.10.8-risczero.0", features = [
    'compress',
] }
num-bigint = "0.4.4"
num-traits = "0.2.19"
crypto-bigint = "0.5.5"
url = "2.5.4"
starknet-types-core = "0.1.7"
ruint = "1.12.3"
pyo3 = { version = "0.23.3", features = ["extension-module"] }
tempfile = "3.17.1"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes.git", tag = "sha2-v0.10.8-risczero.0" }
