[workspace]
resolver = "2"
members = [
    "crates/starknet-handler",
    "crates/client",
    "crates/relayer",
    "crates/common",
    "crates/methods",
    "crates/publisher",
    "crates/guest-types",
    "crates/ethereum",
    "crates/mmr-utils",
    "crates/guest-mmr",
    "crates/ipfs-utils",
]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
# External git dependencies
eth-rlp-types = { git = "https://github.com/NethermindEth/eth-rlp-verify.git", package = "eth-rlp-types", branch = "tiny-keccak" }
eth-rlp-verify = { git = "https://github.com/NethermindEth/eth-rlp-verify.git", branch = "tiny-keccak" }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs.git", branch = "master" }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs.git", branch = "master" }
mmr = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "feat/sha2-hasher" }
store = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "feat/sha2-hasher" }
hasher = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "feat/sha2-hasher", features = [
    "sha256",
] }
garaga_rs = { git = "https://github.com/keep-starknet-strange/garaga.git", branch = "main", default-features = false }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.3.2" }

sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
eyre = "0.6.12"
tracing = "0.1.41"
tokio = "1.41.1"
dotenv = "0.15"
clap = { version = "4.5.31", features = ["derive"] }
axum = { version = "0.8.1", features = ["macros"] }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes.git", tag = "sha2-v0.10.8-risczero.0" }
