[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
host = { path = "../host" }
starknet-handler = { path = "../starknet-handler" }
common = { path = "../common" }
mmr-utils = { path = "../mmr-utils" }

starknet = "0.12.0"
tokio = { version = "1.41.1", features = ["full"] }
eyre = "0.6.10"
tracing = "0.1.39"
clap = "4.5"

# [lints]
# workspace = true
