[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
host = { path = "../host" }
starknet-handler = { path = "../starknet-handler" }
common = { path = "../common" }
mmr-utils = { path = "../mmr-utils" }

eyre = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
starknet = { workspace = true }

clap = "4.5"

# [lints]
# workspace = true
