[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
publisher = { path = "../publisher" }
starknet-handler = { path = "../starknet-handler" }
common = { path = "../common" }
mmr-utils = { path = "../mmr-utils" }

eyre = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
starknet = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
dotenv = { workspace = true }



