[package]
name = "guest-mmr"
version = "0.1.0"
edition = "2021"

[dependencies]
guest-types = { path = "../guest-types" }

hex = "0.4"
sha2 = { git = 'https://github.com/risc0/RustCrypto-hashes.git', tag = 'sha2-v0.10.8-risczero.0', features = ['compress'] }
num-bigint = "0.4.4"
num-traits = "0.2.19"
thiserror = "2.0.3"

[dev-dependencies]
mmr-utils = { path = "../mmr-utils" }
common = { path = "../common" }

tokio = { version = "1.39.0", features = ["full"] }