[package]
name = "guest-types"
version = "0.1.0"
edition = "2021"

[dependencies]
block-validity = { git = "https://github.com/OilerNetwork/fossil-offchain-processor.git", branch = "block-validity-deps-segregation" }
serde = { version = "1.0", features = ["derive"] }
risc0-zkvm = { version = "1.1.3", default-features = false, features = ['std'] }
