[package]
name = "host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "update_mmr"
path = "bin/update_mmr.rs"

[[bin]]
name = "build_mmr"
path = "bin/build_mmr.rs"

[dependencies]
guest-types = { path = "../guest-types" }
starknet-handler = { path = "../starknet-handler" }
methods = { path = "../methods" }
common = { path = "../common" }
ethereum = { path = "../ethereum" }
mmr-utils = { path = "../mmr-utils" }

garaga_rs = { git = "https://github.com/ametel01/garaga.git" }
db-access = { git = "https://github.com/OilerNetwork/fossil-offchain-processor.git", branch = "block-validity-deps-segregation" }
mmr = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "workspace" }
store = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "workspace" }

eyre = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

risc0-zkvm = { version = "1.1.3" }
serde = "1.0"
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-groth16 = "1.1.2"
starknet-crypto = "0.7.3"
clap = { version = "4.5", features = ["derive"] }

[lints]
workspace = true
