[package]
name = "ipfs-utils"
version = "0.1.0"
edition = "2021"
description = "IPFS utilities for handling MMR database files"
license = "MIT"

[dependencies]
tracing = { workspace = true }
thiserror = {workspace = true}
curl = "0.4.47" 
tokio = { version = "1.28", features = ["full"] }
serde_json = "1.0.139"

[dev-dependencies]
tempfile = "3.17.1"