[package]
name = "ipfs-utils"
version = "0.1.0"
edition = "2021"
description = "IPFS utilities for handling MMR database files"
license = "MIT"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
curl = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
dotenv = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
