[package]
name = "mmr-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
eyre = { workspace = true }

uuid = "1.14.0"

store = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "feat/sha2-hasher" }
hasher = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "feat/sha2-hasher", features = ["sha256"] }
mmr = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "feat/sha2-hasher" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
