[package]
name = "mmr-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = { workspace = true }
hasher = { workspace = true }
mmr = { workspace = true }
sqlx = { workspace = true }
store = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
