[package]
name = "publisher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "update-mmr"
path = "bin/update_mmr.rs"

[[bin]]
name = "build-mmr"
path = "bin/build_mmr.rs"

[[bin]]
name = "extract-fees"
path = "bin/extract_fees.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
common = { path = "../common" }
dotenv = { workspace = true }
eth-rlp-types = { workspace = true }
ethereum = { path = "../ethereum" }
garaga_rs = { git = "https://github.com/keep-starknet-strange/garaga.git", branch = "main", default-features = false }
guest-types = { path = "../guest-types" }
ipfs-utils = { path = "../ipfs-utils" }
methods = { path = "../methods" }
mmr = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "feat/sha2-hasher" }
mmr-utils = { path = "../mmr-utils" }
pyo3 = { version = "0.23.3", features = ["extension-module"] }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.2.1" }
risc0-zkvm = { version = "1.2.1" }
serde = "1.0"
sqlx = { workspace = true }
starknet = { workspace = true }
starknet-crypto = { workspace = true }
starknet-handler = { path = "../starknet-handler" }
starknet-types-core = "0.1.7"
store = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "feat/sha2-hasher" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }

[dev-dependencies]
hasher = { git = "https://github.com/ametel01/rust-accumulators.git", branch = "feat/sha2-hasher", features = [
    "sha256",
] }
mockall = "0.13"

[lib]
name = "publisher"
crate-type = ["cdylib", "rlib"]
