[package]
name = "publisher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "update-mmr"
path = "bin/update_mmr.rs"

[[bin]]
name = "build-mmr"
path = "bin/build_mmr.rs"

[[bin]]
name = "mmr-benchmark"
path = "bin/mmr_benchmark.rs"

[dependencies]
clap = { workspace = true }
common = { path = "../common" }
dotenv = { workspace = true }
eth-rlp-types = { workspace = true }
ethereum = { path = "../ethereum" }
garaga_rs = { workspace = true }
guest-types = { path = "../guest-types" }
ipfs-utils = { path = "../ipfs-utils" }
methods = { path = "../methods" }
mmr = { workspace = true }
mmr-utils = { path = "../mmr-utils" }
pyo3 = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
starknet-crypto = { workspace = true }
starknet-handler = { path = "../starknet-handler" }
starknet-types-core = { workspace = true }
store = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
hasher = { workspace = true }
mockall = { workspace = true }

[lib]
name = "publisher"
crate-type = ["cdylib", "rlib"]
