[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

eyre = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
dotenv = { workspace = true }
clap = { workspace = true }

alloy = { version = "0.6.4", features = [
    "providers",
    "network",
    "sol-types",
    "signer-local",
] }
alloy-contract = "0.6.4"
alloy-sol-types = { version = "0.8.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
serial_test = "2.0"
