[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

eyre = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
dotenv = { workspace = true }
clap = { workspace = true }
alloy = { workspace = true }
alloy-contract = { workspace = true }
alloy-sol-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serial_test = "2.0"
