[package]
name = "starknet-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

starknet = { workspace = true }
tracing = { workspace = true }
starknet-crypto = { workspace = true }
tokio = {workspace = true}
eyre = { workspace = true }

crypto-bigint = "0.5.5"

[dev-dependencies]
mockall = "0.13.1"
tokio = { version = "1.43.0", features = ["full"] } 
url = "2.5.4"