[package]
name = "starknet-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
thiserror = { workspace = true }
starknet = { workspace = true }
tracing = { workspace = true }
starknet-crypto = { workspace = true }
tokio = { workspace = true }
crypto-bigint = { workspace = true }
url = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["full"] }
