[package]
name = "starknet-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
crypto-bigint = { workspace = true }
eyre = { workspace = true }
starknet = { workspace = true }
starknet-crypto = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
