[package]
name = "state-proof-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-server = "0.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
publisher = { path = "../publisher" }
