[package]
name = "state-proof-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fetch-fees-proof"
path = "bin/fetch-fees-proof.rs"

[dependencies]
common = { path = "../common" }
publisher = { path = "../publisher" }
methods = { path = "../methods" }

clap = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }

axum-server = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
reqwest = { version = "0.12", features = ["json"] }
risc0-zkvm = { version = "1.2.4", default-features = false, features = ['std'] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
