[package]
name = "mmr-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
guest-types= {path = "../../guest-types"}

risc0-zkvm = { version = "1.1.3", default-features = false, features = ['std'] }
block-validity = { git = "https://github.com/OilerNetwork/fossil-offchain-processor.git", branch = "block-validity-deps-segregation" }
serde = { version = "1.0.215", features = ["derive"] }
sha3 = "0.10"
hex = "0.4"
thiserror = "2.0.3"
starknet-crypto = "0.7.3"