[package]
name = "blocks-validity"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
guest-types = { path = "../../guest-types" }
guest-mmr = { path = "../../guest-mmr" }
common = { path = "../../common" }

eth-rlp-types = { git = "https://github.com/ametel01/eth-rlp-verify.git" }
eth-rlp-verify = { git = "https://github.com/ametel01/eth-rlp-verify.git" }

risc0-zkvm = { version = "1.1.3", default-features = false, features = ['std'] }
