[package]
name = "mmr-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
guest-types = { path = "../../guest-types" }
starknet-handler = { path = "../../starknet-handler" }

eth-rlp-types = { git = "https://github.com/ametel01/eth-rlp-verify.git" }
eth-rlp-verify = { git = "https://github.com/ametel01/eth-rlp-verify.git" }

thiserror = "2.0.3"
risc0-zkvm = { version = "1.1.3", default-features = false, features = ['std'] }
sha3 = "0.10"
serde = { version = "1.0.215", features = ["derive"] }
hex = "0.4"
starknet-crypto = "0.7.3"
