[package]
name = "mmr-append"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
guest-types = { path = "../../guest-types" }
guest-mmr = { path = "../../guest-mmr" }
common = { path = "../../common" }

eth-rlp-types = { git = "https://github.com/ametel01/eth-rlp-verify.git" }
eth-rlp-verify = { git = "https://github.com/ametel01/eth-rlp-verify.git" }

# thiserror = "2.0.3"
risc0-zkvm = { version = "1.1.3", default-features = false, features = ['std'] }

# serde = { version = "1.0.215", features = ["derive"] }
# hex = "0.4"
# sha2 = { git = 'https://github.com/risc0/RustCrypto-hashes.git', tag = 'sha2-v0.10.8-risczero.0', features = ['compress'] }
# num-bigint = "0.4.4"
# num-traits = "0.2.19"