[package]
name = "validate_blocks_and_extract_fees"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
guest-types = { path = "../../guest-types" }
guest-mmr = { path = "../../guest-mmr" }
common = { path = "../../common" }

eth-rlp-types = { git = "https://github.com/NethermindEth/eth-rlp-verify.git", package = "eth-rlp-types" }
eth-rlp-verify = { git = "https://github.com/NethermindEth/eth-rlp-verify.git" }

risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
