[package]
name = "validate_blocks_and_extract_fees"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
guest-types = { path = "../../guest-types" }
guest-mmr = { path = "../../guest-mmr" }
common = { path = "../../common" }

eth-rlp-types = { git = "https://github.com/NethermindEth/eth-rlp-verify.git", package = "eth-rlp-types", branch = "tiny-keccak" }
eth-rlp-verify = { git = "https://github.com/NethermindEth/eth-rlp-verify.git", branch = "tiny-keccak" }

risc0-zkvm = { version = "1.2.4", default-features = false, features = [
    'std',
    'unstable',
] }

[patch.crates-io]
# Placing this patch statement in the workspace Cargo.toml will add RISC Zero keccak precompile
# support for all downstream usages of the `tiny-keccak` crate.
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", rev = "7ff2b8465891d1cbb55a69e553e05d369ce41d72" }
